# k8s-vanilla-lab

./: .gitignore  README.md
Project/: .dockerignore  Dockerfile  pyproject.toml
Project/api/: Chart.yaml  values.yaml
Project/api/templates/: deployment.yaml  gatewayclass.yaml  httproute.yaml
Project/argocd/: lab-api-application.yaml  lab-api-project.yaml
Project/k8s/: .helmignore  values.yaml
Project/k8s/templates/: deployment.yaml  gateway.yaml  gatewayclass.yaml  httproute.yaml
Project/src/: main.py  models.py  routes.py
k8s/: deployment_test.yaml  kubeadm-config.yml  memory-leak-example.yaml  pod-teste.yaml  probes-test-deploy.yaml
k8s-examples/Deploys/: deployment_test.yaml
k8s-examples/Jobs/: cron-job-test.yaml  job-test.yaml
k8s-examples/Services/: clusterIP-test.yaml
k8s-examples/Sets/: pod-disruption-budget-test.yaml  statefulSet-test.yaml
k8s/Jobs/: job-test.yaml
k8s/Services/: clusterIP-test.yaml
k8s/Sets/: statefulSet-test.yaml
scripts/: ec2_ips.sh  ec2_power.sh
terraform/: backend.hcl.example  backend.tf  modules.tf  outputs.tf  providers.tf  variables.tf
terraform/modules/compute/: data.tf  eips.tf  instances.tf  outputs.tf  security_groups.tf  terraform-docs.md  variables.tf
terraform/modules/network/: outputs.tf  routing.tf  subnets.tf  terraform-docs.md  variables.tf  vpc.tf
